[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "A key-value store"
authors = ["Panagiotis Ganelis <ganelis.pan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
structopt = "0.3.26"
thiserror = "1.0.49"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.5.1"
predicates = "3.0.4"
rand = "0.8.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
