[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "A key-value store"
authors = ["Panagiotis Ganelis <ganelis.pan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sled = "0.34.7"
structopt = "0.3.26"
thiserror = "1.0.49"
num_cpus = "1.10.0"
rayon = "1.0.3"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "rt", "net", "macros", "io-util", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.29"
tokio-serde = { version = "0.8.0", features = ["json"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
async-trait = "0.1.74"
criterion = { version = "0.5.1", features = ["async_futures"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
assert_cmd = "2.0.12"
criterion = "0.5.1"
crossbeam-utils = "0.8.16"
predicates = "3.0.4"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false
